...
                }
            },
            modifier = Modifier.fillMaxWidth()
        ) {
            Text(
                modifier = Modifier.padding(7.dp),
                text = "Sign In"
            )
        }

    }

    LaunchedEffect(key1 = state.value?.isSuccess) {
...
