...

                                    last?.swipe(Direction.Right)
                                }
                            },
                            icon = Icons.Filled.Check,
                            iconColor = Color(0xFF5ABA4A),
                            buttonContentDescription = "Like this place"
                        )

                        // Refresh Button
                        CircleButton(
                            onClick = {
                                viewModel.yelpRepository.fetchRestaurants()
...
